--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
       - name: build
         env:
           BASE_PATH: '/'
+          GITHUB_API: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm run build
           touch build/.nojekyll
