--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@octokit/core": "^5.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/vite-plugin-svelte": "^2.4.2",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"dotenv": "^16.3.1",
-		"eslint": "^8.28.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"@eslint/compat": "^1.2",
+		"@eslint/js": "^9.18",
+		"@octokit/core": "7.0.3",
+		"@sveltejs/adapter-static": "^3.0",
+		"@sveltejs/kit": "^2.16",
+		"@sveltejs/vite-plugin-svelte": "^6.1.2",
+		"@types/node": "^24",
+		"daisyui": "^5.0.50",
+		"dotenv": "^17.2.1",
+		"eslint": "^9.18",
+		"eslint-plugin-svelte": "^3.0",
+		"svelte": "^5.37",
+		"svelte-check": "4.3",
+		"tailwindcss": "4.1",
+		"typescript": "5.9",
+		"typescript-eslint": "8.39",
+		"vite": "7.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.12"
+	}
 }
